# helix

./: CLAUDE.md  Cargo.toml
helix-dioxus/: CLAUDE.md  Cargo.toml  DEV_LOGBOOK.md  Dioxus.toml  KEYBINDINGS.md  PLAN.md  README.md  SCROLLBAR_FIX_INVESTIGATION.md  build.rs  clippy.toml
helix-dioxus/assets/: head.html  script.js  styles.css
helix-dioxus/examples/: test_error.rs
helix-dioxus/src/: app.rs  args.rs  buffer_bar.rs  config.rs  editor_view.rs  events.rs  hooks.rs  input.rs  integration_tests.rs  lib.rs  main.rs  picker.rs  prompt.rs  state.rs  statusline.rs  test_helpers.rs  tracing.rs
helix-dioxus/src/components/: buffer_bar.rs  code_actions.rs  completion.rs  confirmation_dialog.rs  diagnostics.rs  editor_view.rs  git_diff_popup.rs  hover.rs  inlay_hints.rs  input_dialog.rs  kbd.rs  keybinding_help.rs  lsp_dialog.rs  mod.rs  modal_overlay.rs  notification.rs  popup_menu.rs  prompt.rs  scrollbar.rs  signature_help.rs  statusline.rs
helix-dioxus/src/components/dialog/: command_completion.rs  confirmation.rs  input.rs  lsp_status.rs  mod.rs  notification.rs  prompt.rs
helix-dioxus/src/components/file_icons/: mod.rs  svgs.rs
helix-dioxus/src/components/inline_dialog/: container.rs  list.rs  mod.rs
helix-dioxus/src/components/lsp/: code_action_preview.rs  code_actions.rs  completion.rs  hover.rs  location_picker.rs  markdown.rs  mod.rs  signature_help.rs
helix-dioxus/src/components/picker/: generic.rs  highlight.rs  item.rs  mod.rs  preview.rs  scrollbar.rs
helix-dioxus/src/icons/: logos.rs  lucide.rs  mod.rs  vscode_icons.rs
helix-dioxus/src/keybindings/: command.rs  completion.rs  confirmation.rs  input_dialog.rs  insert.rs  mod.rs  normal.rs  picker.rs  regex.rs  search.rs  select.rs  shell.rs  translate.rs
helix-dioxus/src/keymap/: command.rs  default.rs  mod.rs  trie.rs
helix-dioxus/src/lsp/: conversions.rs  diff.rs  mod.rs  types.rs
helix-dioxus/src/operations/: buffer.rs  cli.rs  clipboard.rs  editing.rs  jump.rs  lsp.rs  macro_ops.rs  mod.rs  movement.rs  picker_ops.rs  search.rs  selection.rs  shell.rs  text_manipulation.rs  theme.rs  vcs.rs  word_jump.rs
helix-dioxus/src/platform/: macos.rs  mod.rs
helix-dioxus/src/state/: lsp_events.rs  mod.rs  types.rs
helix-term/src/: commands.rs
helix-view/src/: view.rs
