[package]
name = "helix-dioxus"
description = "Dioxus-based GUI frontend for Helix editor"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "helix_dioxus"
path = "src/lib.rs"

[[bin]]
name = "dhx"
path = "src/bin/dhx/main.rs"

[features]
default = ["git"]
git = ["helix-vcs/git"]

[dependencies]
helix-stdx = { path = "../helix-stdx" }
helix-core = { path = "../helix-core" }
helix-event = { path = "../helix-event" }
helix-view = { path = "../helix-view" }
helix-lsp = { path = "../helix-lsp" }
helix-loader = { path = "../helix-loader" }
helix-vcs = { path = "../helix-vcs" }

# VCS diff types (re-exported by helix-vcs)
imara-diff = "0.2.0"

# Dioxus for GUI
dioxus = { version = "0.7", features = ["desktop"] }
lucide-dioxus = { version = "2.563", features = ["all-icons"] }

# Async runtime
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros"] }
futures = "0.3"

# Logging (tracing with log compatibility)
log = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror.workspace = true

# Image loading for window icon
image = { version = "0.25", default-features = false, features = ["png"] }

# Utilities
once_cell = "1.21"
arc-swap = "1.8.0"
parking_lot.workspace = true

# File walking with gitignore support
ignore = "0.4"

# Glob pattern matching
glob = "0.3"

# Global search support (grep-based)
grep-regex = "0.1"
grep-searcher = "0.1"
grep-matcher = "0.1"

# Native file dialogs
rfd = "0.15"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
helix-loader = { path = "../helix-loader" }

[lints.rust]
unsafe_code = "deny"
missing_docs = "allow"

[lints.clippy]
perf = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

undocumented_unsafe_blocks = "deny"

dbg_macro = "warn"
expect_used = "warn"
if_then_some_else_none = "warn"
indexing_slicing = "warn"
large_include_file = "warn"
min_ident_chars = "warn"
print_stderr = "warn"
print_stdout = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
unnecessary_safety_doc = "warn"
unwrap_used = "warn"

missing-errors-doc = "allow"
module_name_repetitions = "allow"
